deployments/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tiny-url
  labels:
    app.kubernetes.io/name: tiny-url
    app.kubernetes.io/part-of: url-shortener
